logo align fixed

--- a/css/main.css
+++ b/css/main.css
@@ -51,11 +51,11 @@ body {
 }
 
 .brand_logo {
-	text-align: center;
-    vertical-align: middle;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+	vertical-align: middle;
+    display: table-cell;
+    text-align: center;
+    text-align: -webkit-center;
+    text-align: -moz-center;
 }
 
 .svg-logo {
